Iniciando com o php e mais de estilo

--- a/estilo/style.css
+++ b/estilo/style.css
@@ -154,6 +154,7 @@
 }
 
 .livro input[type=text]{
+    font-size: 20px;
     position: absolute;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -188,7 +189,7 @@
 }
 .resenha h2{
     position: absolute;
-    margin: 50px 80px;
+    margin: 40px 80px;
     max-width: 200px;
     color: white;
     font-size: 25px;
@@ -199,11 +200,11 @@
 
 .resenha textarea{
     max-width: 80%;
-    max-height: 250px;
-    min-height: 250px;
+    max-height: 200px;
+    min-height: 200px;
     position: absolute;
     left: 50%;
-    top: 55%;
+    top: 42%;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%,-50%);
     min-width: 80%;
@@ -214,6 +215,29 @@
     border: 3px dotted #4a7557;
     border-radius: 15px;
     background-color: #ffffef;
+}
+
+.resenha input[type=text]{
+    font-size: 20px;
+    position: absolute;
+    top: 55%;
+    left: 30%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%,-50%);
+    max-width: 98%;
+    width: 300px;
+    padding-left: 5px;
+    height: 55px;
+    border: 0;
+    border-radius: 20px;
+    background-color: #4a7557;
+    color: white;
+    margin-top: 90px;
+}
+.resenha input[type=text]::placeholder{
+    padding: 5px;
+    color: white;
+    font-size: 20px;
 }
 
 .resenha input[type=submit]{
@@ -289,4 +313,68 @@
         left: 30px;
     }
 
+}
+
+/** AQUI COMEÇA O ESTILO DA PAGINAÇÃO DE LIVROS **/
+
+.header{
+    position: relative;
+    max-width: 1200px;
+    width: 90%;
+    height: 240px;
+    background-color: white;
+    margin: -20px auto;
+    border-radius: 20px;
+    box-shadow: -15px 10px 0px #4a7557;
+    border-bottom: 2px dashed black;
+    border-left: 2px dashed black;
+}
+
+
+.header h2{
+    background-color: transparent;
+    display: block;
+    max-width: 400px;
+    font-size: 35px;
+    color: #ca6e3f;
+    position: absolute;
+    left: 50%;
+    top: 40%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%,-50%);
+    text-align: center;
+}
+
+.header p{
+    position: absolute;
+    left: 50%;
+    top: 55%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%,-50%);
+    background-color: transparent;
+    color: #ca6e3f;
+    font-size: 20px;
+    display: block;
+    text-align: center;
+    margin-top: 20px;
+}
+
+.conteiner-livros{
+    display: block;
+    position: relative;
+    max-width: 1200px;
+    width: 98%;
+    margin: 0 auto;
+    margin-top: 50px;
+}
+
+.livro-single{
+    color: white;
+    cursor: pointer;
+    padding: 10px;
+    width: 33%;
+    display: inline-block;
+    text-align: center;
+    border-right: 1px dashed white;
+    border-bottom: 1px dashed white;
 }
