--- a/estilo/style.css
+++ b/estilo/style.css
@@ -387,13 +387,33 @@ i.seta-cadastro{
 
 .livro-single{
     color: white;
-    cursor: pointer;
     padding: 10px;
     width: 33%;
     display: inline-block;
     text-align: center;
     border-right: 1px dashed white;
     border-bottom: 1px dashed white;
+}
+
+.livro-single i{
+    font-size: 18px;
+    cursor: pointer;
+    margin-top: 10px;
+    padding: 8px;
+    float: right;
+}
+.livro-single button{
+    border: 0;
+    font-size: 18px;
+    cursor: pointer;
+    float: right;
+}
+.livro-single i.fa-trash{
+    color: #c14141;
+}
+
+.livro-single i.fa-pencil{
+    color: #4a7557;
 }
 
 @media screen and (max-width:780px){
